...
      appBar: AppBar(
        title: Text(S.of(context).generations),
        actions: [
          Padding(
            padding: const EdgeInsets.only(right: 10.0),
            child: IconButton(
              tooltip: 'Search',
              onPressed: () {
                context.push('/search');
              }, 
              icon: const Icon(Icons.search)),
          )
        ]
...
