...
    return Scaffold(
      appBar: AppBar(
        leadingWidth: 56.0,
        toolbarHeight: 56.0,
        elevation: 1,
        leading: IconButton(
          key: const Key('backButton'),
          onPressed: () => Navigator.of(context).pop(),
          iconSize: 24.0,
          icon: const Icon(Icons.arrow_back)
        ),
        title: Container(
          alignment: Alignment.center,
...
